removed some code
